[package]
name = "rusty_m42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"]}
tokio-stream = "0.1.14"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0"
regex = "1.9.3"